fix: fail-on-cache-miss: trueを追加

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -6,8 +6,8 @@
 #                                                                                
 #   Structure:                                                                     
 #     1. prepare-cache    → 🚀 [高速化コア] キャッシュの事前準備                
-#     2. e2e-with-cache   → ⏱️  [ベンチマーク] キャッシュあり計測                
-#     3. e2e-without-cache→ ⏱️  [ベンチマーク] キャッシュなし計測                
+#     2. e2e-with-cache   → ⏱️ [ベンチマーク] キャッシュあり計測                
+#     3. e2e-without-cache→ ⏱️ [ベンチマーク] キャッシュなし計測                
 #     4. summary          → 📊 [結果集計] 統計・比較レポート生成                
 # ══════════════════════════════════════════════════════════════════════════════
 
@@ -218,6 +218,8 @@ jobs:
             ${{ steps.cache-paths.outputs.dir }}
             node_modules
           key: ${{ runner.os }}-${{ matrix.package-manager }}-${{ hashFiles(format('**/{0}', steps.cache-paths.outputs.lockfile)) }}
+          fail-on-cache-miss: true
+          
       # ────────────────────────────────────────────────────────────────────
       #  ⏱️  ベンチマーク計測セクション (install_deps)                     
       #  START/ENDで時間を計測し、GITHUB_ENVに記録                          
