--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -83,7 +83,7 @@ jobs:
         run: |
           if [ "${{ matrix.package-manager }}" = "bun" ]; then
             CACHE_DIR="$HOME/.bun/install/cache"
-            LOCKFILE="bun.lockb"
+            LOCKFILE="bun.lock"
           elif [ "${{ matrix.package-manager }}" = "pnpm" ]; then
             CACHE_DIR="$(pnpm store path)"
             LOCKFILE="pnpm-lock.yaml"
@@ -235,7 +235,7 @@ jobs:
         run: |
           if [ "${{ matrix.package-manager }}" = "bun" ]; then
             CACHE_DIR="$HOME/.bun/install/cache"
-            LOCKFILE="bun.lockb"
+            LOCKFILE="bun.lock"
           elif [ "${{ matrix.package-manager }}" = "pnpm" ]; then
             CACHE_DIR="$(pnpm store path)"
             LOCKFILE="pnpm-lock.yaml"
@@ -329,35 +329,29 @@ jobs:
 
       # ────────────────────────────────────────────────────────────────────
       #  🎭 Playwrightブラウザインストール
-      #  キャッシュミスの場合はブラウザ本体もインストール
-      #  キャッシュヒットの場合はシステム依存関係のみインストール
+      #  キャッシュヒットの場合は完全にスキップ（システム依存関係も不要）
+      #  キャッシュミスの場合のみフルインストール
       # ────────────────────────────────────────────────────────────────────
       - name: Install Playwright browsers
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: |
           START=$(date +%s)
-          
-          if [ "${{ steps.playwright-cache.outputs.cache-hit }}" != "true" ]; then
-            echo "⚠️ Cache miss - Installing browsers with dependencies..."
-            if [ "${{ matrix.package-manager }}" = "bun" ]; then
-              bunx playwright install --with-deps ${{ env.PLAYWRIGHT_BROWSERS }}
-            elif [ "${{ matrix.package-manager }}" = "pnpm" ]; then
-              pnpm exec playwright install --with-deps ${{ env.PLAYWRIGHT_BROWSERS }}
-            else
-              npx playwright install --with-deps ${{ env.PLAYWRIGHT_BROWSERS }}
-            fi
+          echo "⚠️ Cache miss - Installing browsers with dependencies..."
+          if [ "${{ matrix.package-manager }}" = "bun" ]; then
+            bunx playwright install --with-deps ${{ env.PLAYWRIGHT_BROWSERS }}
+          elif [ "${{ matrix.package-manager }}" = "pnpm" ]; then
+            pnpm exec playwright install --with-deps ${{ env.PLAYWRIGHT_BROWSERS }}
           else
-            echo "✅ Cache hit - Installing system dependencies only..."
-            if [ "${{ matrix.package-manager }}" = "bun" ]; then
-              bunx playwright install-deps ${{ env.PLAYWRIGHT_BROWSERS }}
-            elif [ "${{ matrix.package-manager }}" = "pnpm" ]; then
-              pnpm exec playwright install-deps ${{ env.PLAYWRIGHT_BROWSERS }}
-            else
-              npx playwright install-deps ${{ env.PLAYWRIGHT_BROWSERS }}
-            fi
+            npx playwright install --with-deps ${{ env.PLAYWRIGHT_BROWSERS }}
           fi
-          
           END=$(date +%s)
           echo "INSTALL_BROWSERS_DURATION=$((END - START))" >> $GITHUB_ENV
+      
+      - name: Record zero time for cache hit
+        if: steps.playwright-cache.outputs.cache-hit == 'true'
+        run: |
+          echo "✅ Cache hit - Skipping browser installation completely"
+          echo "INSTALL_BROWSERS_DURATION=0" >> $GITHUB_ENV
         
       - name: Run E2E tests (run #${{ matrix.run }})
         id: playwright-tests
